feat: add relanuch button after the update is complete

--- a/src/i18n/English.json
+++ b/src/i18n/English.json
@@ -2,6 +2,7 @@
   "symbol.colon": ": ",
   "ui.button.load": "Load data",
   "ui.button.update": "Update",
+  "ui.button.directUpdate": "Direct update",
   "ui.button.excel": "Export Excel",
   "ui.button.url": "Input URL",
   "ui.button.setting": "Settings",
@@ -12,6 +13,7 @@
   "ui.hint.init": "Please open your wish history inside the game client before clicking on the 'Load data' button",
   "ui.hint.lastUpdate": "Last update",
   "ui.hint.failed": "Oops, something failed",
+  "ui.hint.relaunchHint": "The update has been completed, it will take effect after clicking the button to restart the tool",
   "ui.win.title": "Genshin Wish History Exporter",
   "ui.data.total": "Total",
   "ui.data.times": "Pulls",
