--- a/src/i18n/简体中文.json
+++ b/src/i18n/简体中文.json
@@ -2,6 +2,7 @@
   "symbol.colon": "：",
   "ui.button.load": "加载数据",
   "ui.button.update": "更新数据",
+  "ui.button.directUpdate": "直接更新",
   "ui.button.excel": "导出Excel",
   "ui.button.url": "输入URL",
   "ui.button.setting": "设置",
@@ -11,6 +12,7 @@
   "ui.hint.newAccount": "从其它账号导出数据",
   "ui.hint.init": "请先在游戏里打开任意一个抽卡记录后再点击“加载数据”按钮",
   "ui.hint.lastUpdate": "上次数据更新时间为",
+  "ui.hint.relaunchHint": "更新已完成，点击按钮重启工具后生效",
   "ui.hint.failed": "操作失败",
   "ui.win.title": "原神祈愿记录导出工具",
   "ui.data.total": "一共",
