feat: added option to hide novice wish

--- a/src/i18n/简体中文.json
+++ b/src/i18n/简体中文.json
@@ -40,6 +40,7 @@
   "ui.setting.seaServer": "外服",
   "ui.setting.logTypeHint": "使用游戏日志获取URL时，优先选择哪种服务器生成的日志文件。",
   "ui.setting.autoUpdate": "自动更新",
+  "ui.setting.hideNovice": "隐藏新手祈愿",
   "ui.setting.proxyMode": "代理模式",
   "ui.setting.proxyModeHint": "通过设置系统代理来获取URL，无法从日志中获取到有效的URL时才会启动代理服务器。",
   "ui.setting.fetchFullHistory": "获取完整数据",
