--- a/src/i18n/ภาษาไทย.json
+++ b/src/i18n/ภาษาไทย.json
@@ -1,7 +1,8 @@
 {
     "symbol.colon": ": ",
     "ui.button.load": "โหลดข้อมูล",
-    "ui.button.update": "อัพเดต",
+    "ui.button.update": "อัพเดตข้อมูล",
+    "ui.button.directUpdate": "อัพเดตโดยตรง",
     "ui.button.excel": "แปลงเป็น Excel",
     "ui.button.url": "กรอก URL",
     "ui.button.setting": "ตั้งค่า",
@@ -38,12 +39,15 @@
     "ui.setting.seaServer": "เซิฟต่างประเทศ (Global)",
     "ui.setting.logTypeHint": "เลือกเซิฟเวอร์ที่จะให้เซิฟเวอร์สร้าง Log ก่อนที่จะดึงข้อมูลประวัติตู้อธิษฐาน",
     "ui.setting.autoUpdate": "เปิดอัพเดตอัตโนมัติ",
+    "ui.setting.hideNovice": "ซ่อนตู้อธิษฐานเริ่มต้น",
     "ui.setting.proxyMode": "โหมดพร็อกซี่",
     "ui.setting.proxyModeHint": "ในกรณีที่ไม่สามารถดึงข้อมูลจาก URL ที่ระบุได้ ให้ใช้โหมดพร็อกซี่",
-    "ui.setting.closeProxy": "ิปิดโหมดพร็อกซี่",
+    "ui.setting.closeProxy": "ปิดโหมดพร็อกซี่",
     "ui.setting.closeProxyHint": "ในขณะที่เลือกโหมดพร็อกซี่ หากโปรแกรมเกิดขัดข้อง อาจทำให้เกิดผลลัพธ์ไม่ถูกต้องซึ่งอาจส่งผลกระทบระบบของคุณ คุณสามารถคลิกที่นี่เพื่อล้างการตั้งค่าพร็อกซี่",
+    "ui.setting.fetchFullHistory": "ดึงข้อมูลทั้งหมด",
+    "ui.setting.fetchFullHistoryHint": "เมื่อการตั้งค่านี้ถูกเปิดใช้งาน กดปุ่ม \"อัพเดตข้อมูล\" เพื่อดึงข้อมูลอธิษฐานในช่วง 6 เดือนที่ผ่านมา หากพบว่าข้อมูลที่ดึงมานั้นไม่ถูกต้องในช่วง 6 เดือนที่ผ่านมา คุณสามารถใช้ฟังชั่นนี้้เพื่อเรียกซ่อมแซมได้",
     "ui.about.title": "เกี่ยวกับ",
-    "ui.about.license": "โปรแกรมนี้เป็น Open Source โดยอยู่ในอยู่ในใบอนุญาต MIT",
+    "ui.about.license": "โปรแกรมนี้เป็น Open Source โดยอยู่ในภายใต้ใบอนุญาต MIT",
     "ui.urlDialog.title": "กรอก URL ด้วยตัวเอง",
     "ui.urlDialog.hint": "ฟังชั่นนี้ควรจะใช้ก็ต่อเมื่อคุณเข้าใจว่าแหล่ง URL นี้มาจากไหน",
     "ui.urlDialog.placeholder": "โปรดกรอก URL ที่มีคีย์ข้อมูลของคุณ",
@@ -61,8 +65,8 @@
     "log.fetch.gachaType": "กำลังดึงข้อมูลตู้อธิษฐาน",
     "log.fetch.gachaTypeOk": "ได้ข้อมูลตู้อธิษฐานสำเร็จ",
     "log.url.lackAuth": "ไม่พบสิทธิ์การเข้าถึงข้อมูล",
-    "log.proxy.hint": "กำลังใช้โหมดพร็อกซี [${ip}:${port}] เพื่อดึงข้อมูลตู้อธิษฐาน โปรดเปิดประวัติตู้กาชาในเกมส์ของคุณ หรือลองรีเฟรชข้อมูล",
-    "log.url.notFound2": "ไม่พบ URL ที่ต้องการ โปรดตรวจสอบให้แน่ใจว่าคุณได้เปิดประวัติตู้กาชาในเกมส์ของคุณแล้ว",
+    "log.proxy.hint": "กำลังใช้โหมดพร็อกซี [${ip}:${port}] เพื่อดึงข้อมูลตู้อธิษฐาน โปรดเปิดประวัติตู้อธิษฐานในเกมส์ของคุณ หรือลองรีเฟรชข้อมูล",
+    "log.url.notFound2": "ไม่พบ URL ที่ต้องการ โปรดตรวจสอบให้แน่ใจว่าคุณได้เปิดประวัติตู้อธิษฐานในเกมส์ของคุณแล้ว",
     "log.url.incorrect": "ไม่พบพารามิเตอร์ที่ต้องการ",
     "log.autoUpdate.success": "อัพเดตสำเร็จ，โปรดรีสตาร์จโปรแกรม",
     "excel.header.time": "เวลา",
