--- a/src/i18n/ภาษาไทย.json
+++ b/src/i18n/ภาษาไทย.json
@@ -1,7 +1,8 @@
 {
     "symbol.colon": ": ",
     "ui.button.load": "โหลดข้อมูล",
-    "ui.button.update": "อัพเดต",
+    "ui.button.update": "อัพเดตข้อมูล",
+    "ui.button.directUpdate": "อัพเดตโดยตรง",
     "ui.button.excel": "แปลงเป็น Excel",
     "ui.button.url": "กรอก URL",
     "ui.button.setting": "ตั้งค่า",
@@ -42,6 +43,8 @@
     "ui.setting.proxyModeHint": "ในกรณีที่ไม่สามารถดึงข้อมูลจาก URL ที่ระบุได้ ให้ใช้โหมดพร็อกซี่",
     "ui.setting.closeProxy": "ิปิดโหมดพร็อกซี่",
     "ui.setting.closeProxyHint": "ในขณะที่เลือกโหมดพร็อกซี่ หากโปรแกรมเกิดขัดข้อง อาจทำให้เกิดผลลัพธ์ไม่ถูกต้องซึ่งอาจส่งผลกระทบระบบของคุณ คุณสามารถคลิกที่นี่เพื่อล้างการตั้งค่าพร็อกซี่",
+    "ui.setting.fetchFullHistory": "ดึงข้อมูลทั้งหมด",
+    "ui.setting.fetchFullHistoryHint": "เมื่อการตั้งค่านี้ถูกเปิดใช้งาน กดปุ่ม \"อัพเดตข้อมูล\" เพื่อดึงข้อมูลอธิษฐานในช่วง 6 เดือนที่ผ่านมา หากพบว่าข้อมูลที่ดึงมานั้นไม่ถูกต้องในช่วง 6 เดือนที่ผ่านมา คุณสามารถใช้ฟังชั่นนี้้เพื่อเรียกซ่อมแซมได้",
     "ui.about.title": "เกี่ยวกับ",
     "ui.about.license": "โปรแกรมนี้เป็น Open Source โดยอยู่ในอยู่ในใบอนุญาต MIT",
     "ui.urlDialog.title": "กรอก URL ด้วยตัวเอง",
@@ -75,4 +78,3 @@
     "excel.filePrefix": "Genshin wish logger",
     "excel.fileType": "ไฟล์ Excel"
   }
-  
