--- a/src/i18n/Pусский.json
+++ b/src/i18n/Pусский.json
@@ -4,7 +4,7 @@
   "ui.button.update": "Обновить данные",
   "ui.button.excel": "Экспортировать в Excel",
   "ui.button.setting": "Настройки",
-  "ui.select.newAccount": "Добавить аккаунт", 
+  "ui.select.newAccount": "Добавить аккаунт",
   "ui.hint.newAccount": "Экспорт данных из другой учетной записи",
   "ui.hint.init": "Пожалуйста, откройте любую историю своих молитв в игре, прежде чем нажимать кнопку 'Загрузить данные'",
   "ui.hint.lastUpdate": "Последнее обновление",
@@ -53,7 +53,7 @@
   "log.fetch.gachaType": "Получение типа Банера. Пожалуйста, подождите...",
   "log.fetch.gachaTypeOk": "Тип Банера определён",
   "log.url.lackAuth": "Ключ авторизации не найден в URL",
-  "log.proxy.hint": "Используйте Прокси-режим [${ip}:${port}] для получения URL. Просто откройте историю молитв или попробуйте перезапустить игру.",
+  "log.proxy.hint": "Используйте Прокси-режим [${ip}:${port}] для получения URL, откройте историю Молитв внутри игрового клиента.",
   "log.url.notFound2": "Невозможно найти URL. Пожалуйста убедитесь, что вы уже открыли историю молитв внутри игры.",
   "log.url.incorrect": "Невозможно получить параметры URL-адреса",
   "log.autoUpdate.success": "Автоматическое обновление прошло успешно. Просто перезапустите программу.",
