--- a/src/i18n/ภาษาไทย.json
+++ b/src/i18n/ภาษาไทย.json
@@ -64,7 +64,7 @@
     "log.fetch.gachaType": "กำลังดึงข้อมูลตู้อธิษฐาน",
     "log.fetch.gachaTypeOk": "ได้ข้อมูลตู้อธิษฐานสำเร็จ",
     "log.url.lackAuth": "ไม่พบสิทธิ์การเข้าถึงข้อมูล",
-    "log.proxy.hint": "กำลังใช้โหมดพร็อกซี [${ip}:${port}] เพื่อดึงข้อมูลตู้อธิษฐาน โปรดเปิดประวัติตู้กาชาในเกมส์ของคุณ หรือลองรีเฟรชข้อมูล",
+    "log.proxy.hint": "กำลังใช้โหมดพร็อกซี [${ip}:${port}] เพื่อดึงข้อมูลตู้อธิษฐาน โปรดทำการเปิดประวัติตู้อธิษฐานใหม่ภายในเกมส์",
     "log.url.notFound2": "ไม่พบ URL ที่ต้องการ โปรดตรวจสอบให้แน่ใจว่าคุณได้เปิดประวัติตู้กาชาในเกมส์ของคุณแล้ว",
     "log.url.incorrect": "ไม่พบพารามิเตอร์ที่ต้องการ",
     "log.autoUpdate.success": "อัพเดตสำเร็จ，โปรดรีสตาร์จโปรแกรม",
