--- a/src/i18n/简体中文.json
+++ b/src/i18n/简体中文.json
@@ -66,7 +66,7 @@
   "log.fetch.gachaType": "正在获取祈愿活动类型",
   "log.fetch.gachaTypeOk": "获取祈愿活动类型成功",
   "log.url.lackAuth": "URL中缺少authkey",
-  "log.proxy.hint": "正在使用代理模式[${ip}:${port}]获取URL，请打开游戏抽卡记录，或刷新抽卡记录",
+  "log.proxy.hint": "正在使用代理模式[${ip}:${port}]获取URL，请重新打开游戏抽卡记录。",
   "log.url.notFound2": "未找到URL，请确认是否已打开游戏抽卡记录",
   "log.url.incorrect": "获取URL参数失败",
   "log.autoUpdate.success": "自动更新已完成，重启工具后生效",
