--- a/src/i18n/繁體中文.json
+++ b/src/i18n/繁體中文.json
@@ -61,7 +61,7 @@
   "log.fetch.gachaType": "正在獲取祈願活動類型",
   "log.fetch.gachaTypeOk": "獲取祈願活動類型成功",
   "log.url.lackAuth": "URL中缺少authkey",
-  "log.proxy.hint": "正在使用代理模式[${ip}:${port}]獲取URL，請打開遊戲抽卡紀錄，或刷新抽卡紀錄。",
+  "log.proxy.hint": "正在使用代理模式[${ip}:${port}]獲取URL，請重新打開遊戲抽卡紀錄。",
   "log.url.notFound2": "未找到URL，請確認是否已打開遊戲抽卡紀錄。",
   "log.url.incorrect": "獲取URL參數失敗。",
   "log.autoUpdate.success": "自動更新已完成，重新啟動工具後生效。",
