--- a/src/i18n/한국어.json
+++ b/src/i18n/한국어.json
@@ -57,11 +57,11 @@
 "log.fetch.retryFailed": "${name}의 ${page}페이지 처리 중 실패했습니다，재시도 최대 시간 초과",
 "log.fetch.interval": "${name}의 ${page}페이지 처리 중，10 페이지마다 1초씩 대기 중",
 "log.fetch.current": "${name}의 ${page}페이지 처리 중",
-"log.fetch.authTimeout": "사용자 인증이 만료되었습니다. 게임 클라이언트 내에서 뽑기 기록을 다시 여세요..",
+"log.fetch.authTimeout": "사용자 인증이 만료되었습니다. 게임 클라이언트 내에서 뽑기 기록을 다시 여세요.",
 "log.fetch.gachaType": "기원 유형을 가져오는 중입니다. 잠시 기다려 주세요.",
 "log.fetch.gachaTypeOk": "기원 유형 가져오기 성공",
 "log.url.lackAuth": "URL에서 인증 키를 찾을 수 없습니다.",
-"log.proxy.hint": "프록시 모드를 사용하여 [${ip}:${port}] URL을 가져왔습니다，뽑기 기록을 열거나 새로 고침 하세요.",
+"log.proxy.hint": "프록시 모드를 사용하여 [${ip}:${port}] URL을 가져왔습니다，게임 클라이언트 내에서 뽑기 기록을 다시 여세요.",
 "log.url.notFound2": "URL을 찾을 수 없습니다. 게임 클라이언트 내에서 뽑기 기록을 열었는지 확인하세요.",
 "log.url.incorrect": "URL 매개 변수를 가져올 수 없습니다.",
 "log.autoUpdate.success": "자동 업데이트 성공，프로그램을 재시작 해주세요.",
