--- a/src/i18n/Pусский.json
+++ b/src/i18n/Pусский.json
@@ -41,6 +41,9 @@
   "ui.setting.closeProxyHint": "Если при выборе Прокси-режима, программа выйдет из строя, это может привести к негативным результатам, которые могут повлиять на Вашу систему. Вы можете нажать эту кнопку, чтобы очистить настройки системного прокси.",
   "ui.about.title": "О нас",
   "ui.about.license": "Это программное обеспечение с открытым исходным кодом, использующее MIT-лицензию.",
+  "ui.setting.hideNovice": "Скрыть молитвы новичка",
+  "ui.setting.fetchFullHistory": "Обновить Данные",
+  "ui.setting.fetchFullHistoryHint": "Когда эта опция включена, нажмите кнопку \"Обновить Данные\" чтобы получить все данные о молитвах в течение 6 месяцев. При наличии неправильных данных в течение 6 месяцев эту функцию можно использовать для исправления.",
   "log.save.failed": "Не удалось сохранить локальные данные.",
   "log.file.notFound": "Невозможно найти лог-файлы игры. Пожалуйста убедитесь, что вы уже открыли историю Молитв внутри игры.",
   "log.url.notFound": "Невозможно найти URL",
