--- a/src/i18n/Pусский.json
+++ b/src/i18n/Pусский.json
@@ -40,7 +40,7 @@
   "ui.setting.closeProxy": "Отключить системный Прокси",
   "ui.setting.closeProxyHint": "Если при выборе Прокси-режима, программа выйдет из строя, это может привести к негативным результатам, которые могут повлиять на Вашу систему. Вы можете нажать эту кнопку, чтобы очистить настройки системного прокси.",
   "ui.setting.hideNovice": "Скрыть молитвы новичка",
-  "ui.setting.fetchFullHistory": "Обновить Данные",
+  "ui.setting.fetchFullHistory": "Получить полные данные",
   "ui.setting.fetchFullHistoryHint": "Когда эта опция включена, нажмите кнопку \"Обновить данные\" чтобы получить все данные о молитвах в течение 6 месяцев. При наличии неправильных данных в течение 6 месяцев эту функцию можно использовать для исправления.",
   "ui.about.title": "О нас",
   "ui.about.license": "Это программное обеспечение с открытым исходным кодом, использующее MIT-лицензию.",
