Update Traditional Chinese Translation

--- a/src/i18n/繁體中文.json
+++ b/src/i18n/繁體中文.json
@@ -1,19 +1,21 @@
 {
   "symbol.colon": "：",
-  "ui.button.load": "加載資料",
+  "ui.button.load": "載入資料",
   "ui.button.update": "更新資料",
-  "ui.button.excel": "輸出Excel",
-  "ui.button.url": "輸入URL",
+  "ui.button.directUpdate": "直接更新",
+  "ui.button.excel": "匯出 Excel",
+  "ui.button.url": "輸入 URL",
   "ui.button.setting": "設定",
   "ui.button.option": "選項",
-  "ui.button.startProxy": "代理模式",
+  "ui.button.startProxy": "Proxy 模式",
   "ui.select.newAccount": "新帳號",
-  "ui.hint.newAccount": "從其他帳號導出資料",
-  "ui.hint.init": "請先在遊戲裡打開任意一個抽卡紀錄後，再點擊“加載資料“按鈕。",
+  "ui.hint.newAccount": "從其他帳號匯出資料",
+  "ui.hint.init": "請先在遊戲中開啟任意一個祈願紀錄，再按下「載入資料」按鈕。",
   "ui.hint.lastUpdate": "上次資料更新時間為",
-  "ui.hint.failed": "操作失敗",
-  "ui.win.title": "原神祈願紀錄導出工具",
-  "ui.data.total": "總共",
+  "ui.hint.relaunchHint": "更新已完成，按下按鈕重新啟動工具後生效",
+  "ui.hint.failed": "作業失敗",
+  "ui.win.title": "原神祈願紀錄匯出工具",
+  "ui.data.total": "總計",
   "ui.data.times": "抽",
   "ui.data.sum": "已累計",
   "ui.data.no5star": "抽未出5星",
@@ -29,49 +31,54 @@
   "ui.data.weapon5": "5星武器",
   "ui.data.weapon4": "4星武器",
   "ui.data.weapon3": "3星武器",
-  "ui.setting.title": "設置",
+  "ui.setting.title": "設定",
   "ui.setting.language": "語言",
-  "ui.setting.languageHint": "缺少翻譯時，會默認顯示簡體中文。",
-  "ui.setting.logType": "日誌類型",
+  "ui.setting.languageHint": "缺少翻譯時，預設會顯示簡體中文。",
+  "ui.setting.logType": "記錄類型",
   "ui.setting.auto": "自動",
-  "ui.setting.cnServer": "國服",
+  "ui.setting.cnServer": "陸服",
   "ui.setting.seaServer": "國際服",
-  "ui.setting.logTypeHint": "使用遊戲日誌獲取URL時，優先選擇哪種伺服器產生的日誌文件。",
+  "ui.setting.logTypeHint": "使用遊戲記錄取得 URL 時，優先選擇哪種伺服器產生的記錄檔案。",
   "ui.setting.autoUpdate": "自動更新",
-  "ui.setting.proxyMode": "代理模式",
-  "ui.setting.proxyModeHint": "通過設置系統proxy來獲取URL，打開後會在從日誌中獲取URL失敗時啟動。",
-  "ui.setting.closeProxy": "關閉系統proxy代理",
-  "ui.setting.closeProxyHint": "如果使用過代理模式時工具非正常關閉，可能導致系統proxy設置未能清除，可以通過這個按鈕來清除設置過的系統proxy。",
+  "ui.setting.hideNovice": "隱藏新手祈願",
+  "ui.setting.proxyMode": "Proxy 模式",
+  "ui.setting.proxyModeHint": "透過設定系統 Proxy 以取得 URL，將會在從系統記錄中取得 URL 失敗時啟動。",
+  "ui.setting.fetchFullHistory": "取得完整資料",
+  "ui.setting.fetchFullHistoryHint": "開啟時按下「更新資料」按鈕將會完整取得 6 個月內所有的抽卡紀錄，紀錄內有 6 個月範圍以內的錯誤資料時可以透過此功能修復。",
+  "ui.setting.closeProxy": "停用系統 Proxy",
+  "ui.setting.closeProxyHint": "如果使用 Proxy 模式時程式當機，可能會影響系統網路，可以透過這個按鈕以清除系統 Proxy 設定。",
   "ui.about.title": "關於",
-  "ui.about.license": "本工具為開源軟體，源代碼使用 MIT 協議授權",
-  "ui.urlDialog.title": "手動輸入URL",
-  "ui.urlDialog.hint": "這個功能應當只在你理解這裡需要什麼URL時使用",
-  "ui.urlDialog.placeholder": "請輸入帶有身份認證信息的URL",
+  "ui.about.license": "本工具為開放原始碼軟體，原始碼使用 MIT 授權",
+  "ui.urlDialog.title": "手動輸入 URL",
+  "ui.urlDialog.hint": "此功能應當僅在你理解這裡需要什麼 URL 時使用",
+  "ui.urlDialog.placeholder": "請輸入帶有身分驗證資訊的 URL",
   "ui.common.cancel": "取消",
   "ui.common.ok": "確定",
-  "log.save.failed": "保存本機資料失敗",
-  "log.file.notFound": "未找到遊戲日誌，請確認是否已開啟遊戲抽卡紀錄。",
-  "log.url.notFound": "未找到URL",
-  "log.file.readFailed": "讀取日誌失敗。",
-  "log.fetch.retry": "獲取${name}第${page}頁失敗，5秒後進行第${count}次重試……",
-  "log.fetch.retryFailed": "獲取${name}第${page}頁失敗，已超出重試次數",
-  "log.fetch.interval": "正在獲取${name}第${page}頁，每10頁休息1秒……",
-  "log.fetch.current": "正在獲取${name}第${page}頁",
-  "log.fetch.authTimeout": "身分認證已過期，請重新打開遊戲抽卡紀錄。",
-  "log.fetch.gachaType": "正在獲取祈願活動類型",
-  "log.fetch.gachaTypeOk": "獲取祈願活動類型成功",
-  "log.url.lackAuth": "URL中缺少authkey",
-  "log.proxy.hint": "正在使用代理模式[${ip}:${port}]獲取URL，請重新打開遊戲抽卡紀錄。",
-  "log.url.notFound2": "未找到URL，請確認是否已打開遊戲抽卡紀錄。",
-  "log.url.incorrect": "獲取URL參數失敗。",
+  "log.save.failed": "儲存本機資料失敗",
+  "log.file.notFound": "未找到遊戲記錄，請確認是否已開啟遊戲祈願紀錄。",
+  "log.url.notFound": "未找到 URL",
+  "log.file.readFailed": "讀取記錄失敗。",
+  "log.fetch.retry": "處理${name}第 ${page} 頁失敗，5 秒後進行第 ${count} 次重試……",
+  "log.fetch.retryFailed": "處理${name}第 ${page} 頁失敗，已超出重試次數",
+  "log.fetch.interval": "正在處理${name}第 ${page} 頁，每 10 頁休息 1 秒…",
+  "log.fetch.current": "正在處理${name}第 ${page} 頁",
+  "log.fetch.authTimeout": "身分驗證已過期，請重新開啟遊戲祈願紀錄。",
+  "log.fetch.gachaType": "正在取得祈願活動類型",
+  "log.fetch.gachaTypeOk": "已成功取得祈願活動類型",
+  "log.url.lackAuth": "URL 中找不到驗證金鑰",
+  "log.proxy.hint": "正在使用 Proxy 模式 [${ip}:${port}] 取得 URL，請重新開啟遊戲祈願紀錄。",
+  "log.url.notFound2": "無法找到 URL，請確認是否已開啟遊戲祈願紀錄。",
+  "log.url.incorrect": "無法取得 URL 參數。",
   "log.autoUpdate.success": "自動更新已完成，重新啟動工具後生效。",
   "excel.header.time": "時間",
   "excel.header.name": "名稱",
-  "excel.header.type": "類別",
+  "excel.header.type": "類型",
   "excel.header.rank": "星級",
   "excel.header.total": "總次數",
   "excel.header.pity": "保底內",
+  "excel.header.remark": "備註",
+  "excel.wish2": "祈愿-2",
   "excel.customFont": "微軟雅黑",
   "excel.filePrefix": "原神祈願紀錄",
-  "excel.fileType": "Excel文件"
+  "excel.fileType": "Excel 檔案"
 }
