--- a/src/i18n/Français.json
+++ b/src/i18n/Français.json
@@ -2,6 +2,7 @@
   "symbol.colon": " : ",
   "ui.button.load": "Charger les données",
   "ui.button.update": "Mettre à jour",
+  "ui.button.directUpdate": "Mise à jour directe",
   "ui.button.excel": "Exporter vers Excel",
   "ui.button.url": "URL d'import",
   "ui.button.setting": "Paramètres",
@@ -12,6 +13,7 @@
   "ui.hint.init": "Veuillez ouvrir votre historique de vœux depuis le client du jeu avant de cliquer sur le bouton 'Charger les données'.",
   "ui.hint.lastUpdate": "Dernière mise à jour",
   "ui.hint.failed": "Oups, une erreur est survenue...",
+  "ui.hint.relaunchHint": "La mise à jour est terminée, elle prendra effet après avoir cliqué sur le bouton permettant le redémarrage de l'outil",
   "ui.win.title": "Outil d'export de l'historique de vœux de Genshin Impact",
   "ui.data.total": "Total de",
   "ui.data.times": "tirages.",
@@ -38,8 +40,11 @@
   "ui.setting.seaServer": "Serveur Global",
   "ui.setting.logTypeHint": "Choisissez les journaux générés par le serveur à utiliser en priorité lors de la récupération de l'URL à partir des journaux du jeu.",
   "ui.setting.autoUpdate": "Mise à jour automatique",
+  "ui.setting.hideNovice": "Masquer les vœux du débutant",
   "ui.setting.proxyMode": "Mode Proxy",
   "ui.setting.proxyModeHint": "Si la récupération de l'URL depuis les journaux système échoue, utilisez le proxy système.",
+  "ui.setting.fetchFullHistory": "Récupérer l'intégralité des données",
+  "ui.setting.fetchFullHistoryHint": "Lorsque cette option est active, cliquez sur le bouton \"Mettre à jour les données\" pour récupérer tous les enregistrements des tirages des 6 derniers mois. Cette fonction peut être utilisée si des erreurs figurent dans les données des 6 derniers mois.",
   "ui.setting.closeProxy": "Désactiver le proxy système",
   "ui.setting.closeProxyHint": "Si le programme se bloque lorsque vous choisissez le mode proxy, des résultats indésirables susceptibles d'affecter votre système peuvent survenir. Vous pouvez cliquer sur ce bouton pour réinitialiser les paramètres du proxy système.",
   "ui.about.title": "À propos",
@@ -71,6 +76,8 @@
   "excel.header.rank": "Rareté",
   "excel.header.total": "Tirages",
   "excel.header.pity": "Pity 5★",
+  "excel.header.remark": "Commentaire",
+  "excel.wish2": "Vœux 2",
   "excel.customFont": "Arial",
   "excel.filePrefix": "GenshinImpact_historique_voeux",
   "excel.fileType": "Classeur Excel"
