--- a/src/i18n/繁體中文.json
+++ b/src/i18n/繁體中文.json
@@ -80,5 +80,6 @@
   "excel.wish2": "祈愿-2",
   "excel.customFont": "微軟雅黑",
   "excel.filePrefix": "原神祈願紀錄",
-  "excel.fileType": "Excel 檔案"
+  "excel.fileType": "Excel 檔案",
+  "ui.extra.findCacheFolder": "如果点“打开缓存文件夹”按钮没有反应，可以手动找到游戏的网页缓存文件夹，目录为“你的游戏安装路径/Genshin Impact Game/GenshinImpact_Data/webCaches/Cache/”"
 }
