fix: game v3.8 cache path change

--- a/src/i18n/English.json
+++ b/src/i18n/English.json
@@ -84,5 +84,5 @@
   "excel.filePrefix": "Genshin wish logger",
   "excel.fileType": "Excel file",
   "ui.extra.cacheClean": "1. Confirm whether the wish history in the game has been opened, and if the error \"User authentication expired\" still appears, try the following steps \n2. Close the game window of Genshin Impact \n3. Click the \"Open Web Cache Folder\" button above to open the \"Cache\" folder \n4. Delete the \"Cache_ Data\" folder \n5. Start the Genshin Impact game and open the wish history page in the game \n6. Close this dialog and click the \"Update Data\" button",
-  "ui.extra.findCacheFolder": "If the \"Open cache folder\" button does not respond, you can manually find the game's web cache folder. The directory is \"Your game installation path/Genshin Impact Game/GenshinImpact_Data/webCaches/Cache/\""
+  "ui.extra.findCacheFolder": "If the \"Open cache folder\" button does not respond, you can manually find the game's web cache folder. The directory is \"Your game installation path/Genshin Impact Game/GenshinImpact_Data/webCaches/2.13.0.1/Cache/\""
 }
