--- a/src/i18n/简体中文.json
+++ b/src/i18n/简体中文.json
@@ -84,5 +84,5 @@
   "excel.filePrefix": "原神祈愿记录",
   "excel.fileType": "Excel文件",
   "ui.extra.cacheClean": "1. 确认是否已经打开游戏内的抽卡历史记录，如果仍然出现“身份认证已过期”的错误，再尝试下面的步骤\n2. 关闭原神的游戏窗口\n3. 点击上方的“打开缓存文件夹”按钮，打开Cache文件夹\n4. 删除Cache_Data文件夹\n5. 启动原神游戏，打开游戏内抽卡历史记录页面\n6. 关闭这个对话框，再点击“更新数据”按钮",
-  "ui.extra.findCacheFolder": "如果点“打开缓存文件夹”按钮没有反应，可以手动找到游戏的网页缓存文件夹，目录为“你的游戏安装路径/Genshin Impact Game/YuanShen_Data/webCaches/Cache/”"
+  "ui.extra.findCacheFolder": "如果点“打开缓存文件夹”按钮没有反应，可以手动找到游戏的网页缓存文件夹，目录为“你的游戏安装路径/Genshin Impact Game/YuanShen_Data/webCaches/2.13.0.1/Cache/”"
 }
