--- a/src/i18n/Français.json
+++ b/src/i18n/Français.json
@@ -8,6 +8,8 @@
   "ui.button.setting": "Paramètres",
   "ui.button.option": "Options",
   "ui.button.startProxy": "Mode Proxy",
+  "ui.button.solution": "Solution",
+  "ui.button.cacheFolder": "Ouvrir le dossier de cache",
   "ui.select.newAccount": "Nouveau compte",
   "ui.hint.newAccount": "Charger les données d'autres comptes",
   "ui.hint.init": "Veuillez ouvrir votre historique de vœux depuis le client du jeu avant de cliquer sur le bouton 'Charger les données'.",
@@ -81,4 +83,6 @@
   "excel.customFont": "Arial",
   "excel.filePrefix": "GenshinImpact_historique_voeux",
   "excel.fileType": "Classeur Excel"
+  "ui.extra.cacheClean": "1. Confirmez si l'historique des vœux dans le jeu a été ouvert et si l'erreur \"Authentification utilisateur expirée\" apparaît toujours, essayez les étapes suivantes \n2. Fermez la fenêtre de jeu de Genshin Impact \n3. Cliquez sur le bouton \"Ouvrir le dossier de cache Web\" ci-dessus pour ouvrir le dossier \"Cache\" \n4. Supprimez le dossier \"Cache_Data\" \n5. Démarrez le jeu Genshin Impact et ouvrez la page d'historique des vœux dans le jeu \n6. Fermez cette boîte de dialogue et cliquez sur le bouton \"Mettre à jour les données\"",
+  "ui.extra.findCacheFolder": "Si le bouton \"Ouvrir le dossier de cache\" ne répond pas, vous pouvez rechercher manuellement le dossier cache web du jeu. Le répertoire est \"Chemin d'installation de votre jeu/Genshin Impact Game/GenshinImpact_Data/webCaches/Cache/\""
 }
