--- a/src/i18n/简体中文.json
+++ b/src/i18n/简体中文.json
@@ -50,6 +50,11 @@
   "ui.setting.fetchFullHistoryHint": "开启时点击“更新数据”按钮会完整获取6个月内所有的抽卡记录，当记录里有6个月范围以内的错误数据时可以通过这个功能修复。",
   "ui.setting.closeProxy": "关闭系统代理",
   "ui.setting.closeProxyHint": "如果使用过代理模式时工具非正常关闭，可能导致系统代理设置没能清除，可以通过这个按钮来清除设置过的系统代理。",
+  "ui.setting.UIGFHint": "该功能用于导出数据到其它抽卡记录管理工具（首次导出需要花费一点时间），支持的工具参考这个链接：",
+  "ui.setting.UIGFLink": "统一可交换抽卡记录标准",
+  "ui.setting.UIGFLable": "导出到其它工具",
+  "ui.setting.UIGFButton": "导出JSON文件",
+  "ui.setting.UIGFReadable": "可读",
   "ui.about.title": "关于",
   "ui.about.license": "本工具为开源软件，源代码使用 MIT 协议授权",
   "ui.urlDialog.title": "手动输入URL",
