--- a/src/i18n/Pусский.json
+++ b/src/i18n/Pусский.json
@@ -2,13 +2,21 @@
   "symbol.colon": ": ",
   "ui.button.load": "Загрузить данные",
   "ui.button.update": "Обновить данные",
+  "ui.button.directUpdate": "Прямое обновление",
   "ui.button.excel": "Экспортировать в Excel",
+  "ui.button.url": "Ввести URL",
   "ui.button.setting": "Настройки",
-  "ui.select.newAccount": "Добавить аккаунт",
+  "ui.button.option": "Опции", 
+  "ui.button.startProxy": "Режим прокси",
+  "ui.button.solution": "Решение",
+  "ui.button.cacheFolder": "Открыть папку кэша",
+  "ui.button.copyUrl": "Скопировать URL",
+  "ui.select.newAccount": "Добавить аккаунт",  
   "ui.hint.newAccount": "Экспорт данных из другой учетной записи",
   "ui.hint.init": "Пожалуйста, откройте любую историю своих молитв в игре, прежде чем нажимать кнопку 'Загрузить данные'",
   "ui.hint.lastUpdate": "Последнее обновление",
-  "ui.hint.failed": "Упс, что-то пошло не так..",
+  "ui.hint.failed": "Упс, что-то пошло не так..", 
+  "ui.hint.relaunchHint": "Обновление завершено, оно вступит в силу после перезапуска инструмента",
   "ui.win.title": "Экспортер истории молитв",
   "ui.data.total": "Всего",
   "ui.data.times": "Молитв",
@@ -17,7 +25,7 @@
   "ui.data.character": "Персонаж",
   "ui.data.weapon": "Оружие",
   "ui.data.star5": "5 Звёзд",
-  "ui.data.star4": "4 Звезды",
+  "ui.data.star4": "4 Звезды", 
   "ui.data.star3": "3 Звезды",
   "ui.data.history": "Полученные 5* награды",
   "ui.data.average": "Среднее число получения 5*",
@@ -28,33 +36,43 @@
   "ui.data.weapon3": "3* Оружие",
   "ui.setting.title": "Настройки",
   "ui.setting.language": "Язык",
-  "ui.setting.languageHint": "Если перевод отсутствует, то по умолчанию будет использован английский язык.",
+  "ui.setting.languageHint": "Если перевод отсутствует, то по умолчанию будет использован английский язык.", 
   "ui.setting.logType": "Тип журнала",
   "ui.setting.auto": "Автоматически",
   "ui.setting.cnServer": "CN сервер",
   "ui.setting.seaServer": "Глобальный сервер",
   "ui.setting.logTypeHint": "Выберите, какие сгенерированные сервером файлы журнала, будут использоваться в первую очередь при получении URL из игрового журнала.",
-  "ui.setting.autoUpdate": "Авто обновление",
+  "ui.setting.autoUpdate": "Авто обновление",  
+  "ui.setting.hideNovice": "Скрыть молитвы новичка",
   "ui.setting.proxyMode": "Прокси-режим",
   "ui.setting.proxyModeHint": "Если нам не удаётся получить URL из системного журнала, воспользуйтесь системным Прокси.",
+  "ui.setting.UIGFHint": "Эта функция используется для экспорта данных историии молитв с помощью других инструментов, (первый экспорт может потребовать больше времени ожидания).",
+  "ui.setting.UIGFLink": "Uniformed Interchangeable GachaLog Format Standard",   
+  "ui.setting.UIGFLable": "Экспорт другими инструментами",
+  "ui.setting.UIGFButton": "Экспортировать JSON файл", 
+  "ui.setting.UIGFReadable": "Читабельный",
   "ui.setting.closeProxy": "Отключить системный Прокси",
-  "ui.setting.closeProxyHint": "Если при выборе Прокси-режима, программа выйдет из строя, это может привести к негативным результатам, которые могут повлиять на Вашу систему. Вы можете нажать эту кнопку, чтобы очистить настройки системного прокси.",
-  "ui.setting.hideNovice": "Скрыть молитвы новичка",
-  "ui.setting.fetchFullHistory": "Получить полные данные",
-  "ui.setting.fetchFullHistoryHint": "Когда эта опция включена, нажмите кнопку \"Обновить данные\" чтобы получить все данные о молитвах в течение 6 месяцев. При наличии неправильных данных в течение 6 месяцев эту функцию можно использовать для исправления.",
+  "ui.setting.closeProxyHint": "В случае сбоя программы при использовании прокси-режима, настройки прокси можно сбросить, нажав эту кнопку.",
+  "ui.setting.fetchFullHistory": "Получить полные данные", 
+  "ui.setting.fetchFullHistoryHint": "Когда эта опция включена, нажмите кнопку \"Обновить данные\" чтобы получить все данные о молитвах в течение 6 месяцев.",
   "ui.about.title": "О нас",
   "ui.about.license": "Это программное обеспечение с открытым исходным кодом, использующее MIT-лицензию.",
-  "log.save.failed": "Не удалось сохранить локальные данные.",
+  "ui.urlDialog.title": "Ввести URL вручную",
+  "ui.urlDialog.hint": "Эта функция должна использоваться только когда вы понимаете какой URL нужен здесь",
+  "ui.urlDialog.placeholder": "Пожалуйста, введите URL с информацией авторизации",
+  "ui.common.cancel": "Отмена",
+  "ui.common.ok": "ОК", 
+  "log.save.failed": "Не удалось сохранить локальные данные.", 
   "log.file.notFound": "Невозможно найти лог-файлы игры. Пожалуйста убедитесь, что вы уже открыли историю Молитв внутри игры.",
   "log.url.notFound": "Невозможно найти URL",
   "log.file.readFailed": "Не удалось прочитать журнал",
-  "log.fetch.retry": "Обработка ${name} страницы ${page} прервалось，новая попытка через 5 секнуд для ${count} времени...",
-  "log.fetch.retryFailed": "Обработка ${name} страницы ${page} прервалось，максимальное время для повторных попыток превышено.",
-  "log.fetch.interval": "Обработка ${name} страницы ${page}，1 повторный тайм-аут через каждые 10 страниц...",
+  "log.fetch.retry": "Обработка ${name} страницы ${page} прервалось,новая попытка через 5 секнуд для ${count} времени...",
+  "log.fetch.retryFailed": "Обработка ${name} страницы ${page} прервалось,максимальное время для повторных попыток превышено.", 
+  "log.fetch.interval": "Обработка ${name} страницы ${page},1 повторный тайм-аут через каждые 10 страниц...",
   "log.fetch.current": "Обработка ${name} страницы ${page}",
   "log.fetch.authTimeout": "Идентификация пользователя истекла. Пожалуйста, откройте историю Молитв внутри игрового клиента.",
   "log.fetch.gachaType": "Получение типа Банера. Пожалуйста, подождите...",
-  "log.fetch.gachaTypeOk": "Тип Банера определён",
+  "log.fetch.gachaTypeOk": "Тип Банера определён", 
   "log.url.lackAuth": "Ключ авторизации не найден в URL",
   "log.proxy.hint": "Используйте Прокси-режим [${ip}:${port}] для получения URL, откройте историю Молитв внутри игрового клиента.",
   "log.url.notFound2": "Невозможно найти URL. Пожалуйста убедитесь, что вы уже открыли историю молитв внутри игры.",
@@ -62,11 +80,16 @@
   "log.autoUpdate.success": "Автоматическое обновление прошло успешно. Просто перезапустите программу.",
   "excel.header.time": "Время",
   "excel.header.name": "Имя",
-  "excel.header.type": "Тип",
+  "excel.header.type": "Тип", 
   "excel.header.rank": "Редкость",
-  "excel.header.total": "Всего",
+  "excel.header.total": "Всего", 
   "excel.header.pity": "Молитв после выпадения 5*",
+  "excel.header.remark": "Примечание",
+  "excel.wish2": "Молитва 2",
   "excel.customFont": "Times New Roman",
   "excel.filePrefix": "Полная история молитв",
-  "excel.fileType": "Excel file"
+  "excel.fileType": "Excel file",
+  "ui.extra.cacheClean": "1. Проверьте, открыта ли история молитв в игре, и если ошибка \"Истек срок действия аутентификации пользователя\" все еще появляется, попробуйте следующие шаги. \\n2. Закройте Genshin Impact.  \\n3. Нажмите кнопку \"Открыть папку веб-кэша\" выше, чтобы открыть папку \"Кэша\". \\n4. Удалите содержимое папки \"Cache_Data\". \\n5. Запустите Genshin Impact и откройте страницу истории молитв в игре. \\n6. Закройте этот диалог и нажмите кнопку \"Обновить данные\".",
+  "ui.extra.findCacheFolder": "Если кнопка \"Открыть папку кэша\" не реагирует, вы можете вручную найти папку веб-кэша игры. Каталог: \"Куда ставили/Genshin Impact Game/GenshinImpact_Data/webCaches/Cache/\",",
+  "ui.extra.urlCopied": "URL скопирован" 
 }
