adding texts for the import feature

--- a/src/i18n/English.json
+++ b/src/i18n/English.json
@@ -51,6 +51,9 @@
   "ui.setting.closeProxy": "Disable system proxy",
   "ui.setting.closeProxyHint": "When you choose proxy mode, if the program crashes it can cause unwanted results that may affect your system. You can click this button to clear the system proxy settings.",
   "ui.setting.UIGFHint": "This feature is used to export data to other wish history management tools (The first export may require a longer waiting time). For a list of supported tools, refer to this link:",
+  "ui.setting.UIGFImportButton": "Import JSON file",
+  "ui.setting.UIGFImportHint": "This feature is used to import data from other wish history management tools. For a list of supported tools, refer to this link:",
+  "ui.setting.UIGFImportLable": "Import from other tools",
   "ui.setting.UIGFLink": "Uniformed Interchangeable GachaLog Format Standard",
   "ui.setting.UIGFLable": "Export to other tools",
   "ui.setting.UIGFButton": "Export JSON file",
