--- a/src/i18n/简体中文.json
+++ b/src/i18n/简体中文.json
@@ -51,6 +51,9 @@
   "ui.setting.closeProxy": "关闭系统代理",
   "ui.setting.closeProxyHint": "如果使用过代理模式时工具非正常关闭，可能导致系统代理设置没能清除，可以通过这个按钮来清除设置过的系统代理。",
   "ui.setting.UIGFHint": "该功能用于导出数据到其它抽卡记录管理工具（首次导出需要花费一点时间），支持的工具参考这个链接：",
+  "ui.setting.UIGFImportButton": "导入JSON文件",
+  "ui.setting.UIGFImportHint": "该功能用于从其它抽卡记录管理工具导入数据，支持的工具参考这个链接：",
+  "ui.setting.UIGFImportLable": "从其它工具导入",
   "ui.setting.UIGFLink": "统一可交换抽卡记录标准",
   "ui.setting.UIGFLable": "导出到其它工具",
   "ui.setting.UIGFButton": "导出JSON文件",
