--- a/src/i18n/Pусский.json
+++ b/src/i18n/Pусский.json
@@ -89,7 +89,7 @@
   "excel.customFont": "Times New Roman",
   "excel.filePrefix": "Полная история молитв",
   "excel.fileType": "Excel file",
-  "ui.extra.cacheClean": "1. Проверьте, открыта ли история молитв в игре, и если ошибка \"Истек срок действия аутентификации пользователя\" все еще появляется, попробуйте следующие шаги. \\n2. Закройте Genshin Impact.  \\n3. Нажмите кнопку \"Открыть папку веб-кэша\" выше, чтобы открыть папку \"Кэша\". \\n4. Удалите содержимое папки \"Cache_Data\". \\n5. Запустите Genshin Impact и откройте страницу истории молитв в игре. \\n6. Закройте этот диалог и нажмите кнопку \"Обновить данные\".",
+  "ui.extra.cacheClean": "1. Проверьте, открыта ли история молитв в игре, и если ошибка \"Истек срок действия аутентификации пользователя\" все еще появляется, попробуйте следующие шаги. \n2. Закройте Genshin Impact.  \n3. Нажмите кнопку \"Открыть папку веб-кэша\" выше, чтобы открыть папку \"Кэша\". \n4. Удалите содержимое папки \"Cache_Data\". \n5. Запустите Genshin Impact и откройте страницу истории молитв в игре. \n6. Закройте этот диалог и нажмите кнопку \"Обновить данные\".",
   "ui.extra.findCacheFolder": "Если кнопка \"Открыть папку кэша\" не реагирует, вы можете вручную найти папку веб-кэша игры. Каталог: \"Куда ставили/Genshin Impact Game/GenshinImpact_Data/webCaches/Cache/\",",
   "ui.extra.urlCopied": "URL скопирован" 
 }
