--- a/src/i18n/简体中文.json
+++ b/src/i18n/简体中文.json
@@ -50,13 +50,12 @@
   "ui.setting.fetchFullHistoryHint": "开启时点击“更新数据”按钮会完整获取6个月内所有的抽卡记录，当记录里有6个月范围以内的错误数据时可以通过这个功能修复。",
   "ui.setting.closeProxy": "关闭系统代理",
   "ui.setting.closeProxyHint": "如果使用过代理模式时工具非正常关闭，可能导致系统代理设置没能清除，可以通过这个按钮来清除设置过的系统代理。",
-  "ui.setting.UIGFHint": "该功能用于导出数据到其它抽卡记录管理工具（首次导出需要花费一点时间），支持的工具参考这个链接：",
-  "ui.setting.UIGFImportButton": "导入JSON文件",
-  "ui.setting.UIGFImportHint": "该功能用于从其它抽卡记录管理工具导入数据，支持的工具参考这个链接：",
-  "ui.setting.UIGFImportLable": "从其它工具导入",
+  "ui.setting.UIGFHint": "该功能用于导入/导出数据（首次导出需要花费一点时间），支持的工具参考这个链接：",
+  "ui.setting.UIGFImportButton": "导入数据",
+  "ui.setting.UIGFImportSuccessed": "数据已导入",
   "ui.setting.UIGFLink": "统一可交换抽卡记录标准",
-  "ui.setting.UIGFLable": "导出到其它工具",
-  "ui.setting.UIGFButton": "导出JSON文件",
+  "ui.setting.UIGFLable": "导入/导出",
+  "ui.setting.UIGFButton": "导出数据",
   "ui.setting.UIGFReadable": "可读",
   "ui.about.title": "关于",
   "ui.about.license": "本工具为开源软件，源代码使用 MIT 协议授权",
