--- a/src/i18n/English.json
+++ b/src/i18n/English.json
@@ -50,13 +50,12 @@
   "ui.setting.fetchFullHistoryHint": "When this option is enabled, click the \"Update Data\" button to get all the card draw records within 6 months. When there are incorrect data within 6 months, this function can be used to repair.",
   "ui.setting.closeProxy": "Disable system proxy",
   "ui.setting.closeProxyHint": "When you choose proxy mode, if the program crashes it can cause unwanted results that may affect your system. You can click this button to clear the system proxy settings.",
-  "ui.setting.UIGFHint": "This feature is used to export data to other wish history management tools (The first export may require a longer waiting time). For a list of supported tools, refer to this link:",
-  "ui.setting.UIGFImportButton": "Import JSON file",
-  "ui.setting.UIGFImportHint": "This feature is used to import data from other wish history management tools. For a list of supported tools, refer to this link:",
-  "ui.setting.UIGFImportLable": "Import from other tools",
+  "ui.setting.UIGFHint": "This feature is used for importing/exporting data (the first export may take some time). Refer to this link for supported tools:",
+  "ui.setting.UIGFImportButton": "Import data",
+  "ui.setting.UIGFImportSuccessed": "Data has been imported",
   "ui.setting.UIGFLink": "Uniformed Interchangeable GachaLog Format Standard",
-  "ui.setting.UIGFLable": "Export to other tools",
-  "ui.setting.UIGFButton": "Export JSON file",
+  "ui.setting.UIGFLable": "Import / Export",
+  "ui.setting.UIGFButton": "Export data",
   "ui.setting.UIGFReadable": "Readable",
   "ui.about.title": "About",
   "ui.about.license": "This software is opensource using MIT license.",
