去除了千星奇域·常驻颂愿中不会出现的5星装扮形录

--- a/src/i18n/简体中文.json
+++ b/src/i18n/简体中文.json
@@ -21,6 +21,7 @@
   "ui.data.total": "一共",
   "ui.data.times": "抽",
   "ui.data.sum": "已累计",
+  "ui.data.no4star": "抽未出4星",
   "ui.data.no5star": "抽未出5星",
   "ui.data.character": "角色",
   "ui.data.weapon": "武器",
@@ -34,13 +35,14 @@
   "ui.data.star3": "3星",
   "ui.data.star2": "2星",
   "ui.data.history": "5星历史记录",
+  "ui.data.history4": "4星历史记录",
   "ui.data.average": "5星平均出货次数为",
+  "ui.data.average4": "4星平均出货次数为",
   "ui.data.chara5": "5星角色",
   "ui.data.chara4": "4星角色",
   "ui.data.weapon5": "5星武器",
   "ui.data.weapon4": "4星武器",
   "ui.data.weapon3": "3星武器",
-  "ui.data.cosmetics5": "5星装扮形录",
   "ui.data.cosmetics4": "4星装扮形录",
   "ui.data.cosmetics3": "3星装扮形录",
   "ui.data.cosmetics2": "2星装扮形录",
