Added option to manually configure game location

--- a/src/i18n/English.json
+++ b/src/i18n/English.json
@@ -37,6 +37,9 @@
   "ui.setting.title": "Settings",
   "ui.setting.language": "Language",
   "ui.setting.languageHint": "When the translation is missing, English will be displayed by default.",
+  "ui.setting.gameDetection": "Game detection",
+  "ui.setting.manual": "Manual",
+  "ui.setting.gameDetectionHint": "Choose if game location is detected automatically, or manually selected",
   "ui.setting.logType": "Log type",
   "ui.setting.auto": "Auto",
   "ui.setting.cnServer": "CN server",
