--- a/src/i18n/English.json
+++ b/src/i18n/English.json
@@ -56,6 +56,7 @@
   "ui.setting.UIGFLink": "Uniformed Interchangeable GachaLog Format Standard",
   "ui.setting.UIGFLable": "Import / Export",
   "ui.setting.UIGFButton": "Export data",
+  "ui.setting.UIGFAllAccounts": "Export all accounts",
   "ui.setting.UIGFReadable": "Readable",
   "ui.about.title": "About",
   "ui.about.license": "This software is opensource using MIT license.",
