Moved hardcoded strings into i18n file

--- a/src/i18n/English.json
+++ b/src/i18n/English.json
@@ -34,6 +34,12 @@
   "ui.data.weapon5": "5 star weapon",
   "ui.data.weapon4": "4 star weapon",
   "ui.data.weapon3": "3 star weapon",
+  "ui.data.radianceCounter": "Capturing radiance counter",
+  "ui.data.radianceWarning": "* Only accurate with complete data",
+  "ui.data.radianceNoChance": "No chance",
+  "ui.data.radianceSmallChance": "Small chance",
+  "ui.data.radianceDecentChance": "Decent chance",
+  "ui.data.radianceGuaranteed": "Guaranteed",
   "ui.setting.title": "Settings",
   "ui.setting.language": "Language",
   "ui.setting.languageHint": "When the translation is missing, English will be displayed by default.",
