Adjusted the counter representation, text contents, and added an explanation in the settings

--- a/src/i18n/English.json
+++ b/src/i18n/English.json
@@ -34,11 +34,11 @@
   "ui.data.weapon5": "5 star weapon",
   "ui.data.weapon4": "4 star weapon",
   "ui.data.weapon3": "3 star weapon",
-  "ui.data.radianceCounter": "Capturing radiance counter",
+  "ui.data.radianceCounter": "Capturing radiance",
   "ui.data.radianceWarning": "* Only accurate with complete data",
   "ui.data.radianceNoChance": "No chance",
   "ui.data.radianceSmallChance": "Small chance",
-  "ui.data.radianceDecentChance": "Decent chance",
+  "ui.data.radianceDecentChance": "Moderate chance",
   "ui.data.radianceGuaranteed": "Guaranteed",
   "ui.setting.title": "Settings",
   "ui.setting.language": "Language",
@@ -64,6 +64,9 @@
   "ui.setting.UIGFButton": "Export data",
   "ui.setting.UIGFAllAccounts": "Export all accounts",
   "ui.setting.UIGFReadable": "Readable",
+  "ui.setting.capturingRadiance": "Capturing Radiance",
+  "ui.setting.capturingRadianceHint": "This is based on the data-gathering compiled in this Reddit thread:",
+  "ui.setting.capturingRadianceLink": "Understanding Genshin Impact’s Capturing Radiance",
   "ui.about.title": "About",
   "ui.about.license": "This software is opensource using MIT license.",
   "ui.urlDialog.title": "Input URL manually",
